--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-# Auditor de calidad Validador de CSV para Pipelines de Datos
+# Auditor de calidad y validador de CSV para Pipelines de Datos
 # Este proyecto utiliza únicamente bibliotecas estándar de Python
 # No requiere dependencias externas adicionales
